GNOME Bugzilla – Bug 746096
printf: handle unsigned modifier for long long
Last modified: 2015-03-12 15:26:37 UTC
Our internal printf (derived from glib's gnulib one) lacks the support for unsigned modifier for long long. Test introduced by 744281 also show the issue: gst/gstprintf.c:85:F:gstprintf:printf_I32_I64:0: 'str' (64-bit u value = -1017017724017666161) is not equal to '"64-bit u value = 17429726349691885455"' (64-bit u value = 17429726349691885455)
Created attachment 299208 [details] [review] printf: handle unsigned modifier for long long For info this patch had also been merged in glib: https://git.gnome.org/browse/glib/commit/?id=5b74681f5b4dd3f5fc93b82a4f706c2337d76a8d
Thanks, pushed: commit 3da3e8df3e50d4cef1d0198aa620a9e78367d7f8 Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Tue Feb 3 16:12:32 2015 +0100 printf: handle unsigned modifier for long long Otherwise, an unsigned integer will be displayed as a signed one if we use internal print, ie HAVE_LONG_LONG_FORMAT is not defined. https://bugzilla.gnome.org/show_bug.cgi?id=746096